Added PDF files downloader logic
